Fix styling issues on iOS
Text inside buttons appear blue instead of black.

--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
     box-sizing: border-box;
     font-size: 1.5rem;
     font-family: 'Chakra Petch', sans-serif;
+    color: black;
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,7 +33,6 @@ button:hover, a:hover {
 a {
     display: none;
     text-decoration: none;
-    color: black;
 }
 
 @media only screen and (max-width: 768px) {
